# BabbleBoop

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example
src/: audio_processing.rs  audio_recording.rs  chatbox.rs  config.rs  lib.rs  main.rs  price_estimator.rs  rate_limiter.rs  recording_manager.rs  transcription.rs  translation.rs  types.rs  typing_indicator.rs
