[package]
name = "babble_boop"
version = "0.3.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
bytes = "1.7.1"
cpal = "0.15.3"
hound = "3.5.1"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
rosc = "0.10.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
